feat: add dataset explaining catboost encoder

--- a/towards_catboost.ipynb
+++ b/towards_catboost.ipynb
@@ -29,11 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "45dcffc3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
+    "\n",
     "import category_encoders as ce\n",
     "import pandas as pd\n",
     "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "01c98a6c",
    "metadata": {},
    "outputs": [
@@ -169,7 +171,7 @@
        "5         C       1"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "2f345934",
    "metadata": {},
    "outputs": [
@@ -275,7 +277,7 @@
        "5         C       1           1.000000"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "81a597bb",
    "metadata": {},
    "outputs": [],
@@ -345,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "d6f08e74",
    "metadata": {},
    "outputs": [
@@ -412,7 +414,7 @@
        "5        0.5"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "cb0f9263",
    "metadata": {},
    "outputs": [
@@ -498,7 +500,7 @@
        "5   0.500000"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "b0c8d0c4",
    "metadata": {},
    "outputs": [
@@ -594,7 +596,7 @@
        "5   0.565054"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "3f48d7ad",
    "metadata": {},
    "outputs": [
@@ -672,7 +674,7 @@
        "5   0.565054"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "617f1b1d",
    "metadata": {},
    "outputs": [
@@ -809,7 +811,7 @@
        "9                   a       1"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9bc334c5",
    "metadata": {},
    "outputs": [
@@ -925,7 +927,7 @@
        "9             0.444444"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e194ac64",
    "metadata": {},
    "outputs": [
@@ -1004,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "id": "6a1e12b6",
    "metadata": {},
    "outputs": [
@@ -1092,7 +1094,7 @@
        "6  Guillermo del Toro               False       0"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1130,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "id": "ef8fc888",
    "metadata": {},
    "outputs": [
@@ -1210,7 +1212,7 @@
        "6  0.372811            0.362372"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1233,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "id": "5ce679aa",
    "metadata": {},
    "outputs": [
@@ -1273,7 +1275,302 @@
    "id": "6f415965",
    "metadata": {},
    "source": [
-    "## The Solution: The Catboost Classifier and its encoding methodology"
+    "## The Solution: The Catboost Classifier and its encoding methodology\n",
+    "\n",
+    "The Catboost classifier is a tree-based model of the family of gradient boosting algorithms which basically iteratively build a tree, compute the loss gradient function and approximate the gradient descent step by adding a tree that fits this loss gradient function to the original tree. These kinds of algorithms are known to be extremely powerfull and even state-of-the-art for tabular datasets.\n",
+    "\n",
+    "However, Catboost has more features that amaze its users, and one of it is its encoding methodology. This methodology is in the family of target encoders, but elegantly solves the issues from the aforementioned failuer scenarios. It works as follows:\n",
+    "\n",
+    "1. First of all, it permutes all samples in the training set before encoding them. In other words, it shuffles the dataset.\n",
+    "\n",
+    "2. Next, it encodes the feature's category of row i ysing the target statistic computed over the previous rows.\n",
+    "\n",
+    "In addition, each tree fitted by the catboost classifier uses a different encoding using a brand new permutation.\n",
+    "\n",
+    "Why does it solve the aforementioned scenarios? Great question! The answer is clear:\n",
+    "\n",
+    "- This methodology solves the issue in scenario 1 since now having a category with extremely high frequency and low correlation with the target variables does not leak the information about the label since the permutations and only encoding with previous rows ensure that each time we get different proportions of 1s.\n",
+    "\n",
+    "- Regarding how it handles columns that behave similar to indexes, since the methodology looks at the previous rows, unique categories are encoded by the prevalence.\n",
+    "\n",
+    "Let us build a dummy dataset:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "9437a732",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>is_from_usa</th>\n",
+       "      <th>right_wing</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>city_0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>city_1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>city_2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>city_3</td>\n",
+       "      <td>True</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>city_4</td>\n",
+       "      <td>True</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>city_5</td>\n",
+       "      <td>True</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>city_6</td>\n",
+       "      <td>True</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>city_7</td>\n",
+       "      <td>True</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>city_8</td>\n",
+       "      <td>True</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>city_9</td>\n",
+       "      <td>True</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     city  is_from_usa right_wing  target\n",
+       "0  city_0         True         no       0\n",
+       "1  city_1         True        yes       1\n",
+       "2  city_2         True         no       0\n",
+       "3  city_3         True         no       0\n",
+       "4  city_4         True         no       0\n",
+       "5  city_5         True         no       0\n",
+       "6  city_6         True         no       0\n",
+       "7  city_7         True         no       0\n",
+       "8  city_8         True        yes       0\n",
+       "9  city_9         True         no       0"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number_of_rows = 10\n",
+    "interesting_column = [random.getrandbits(1) for _ in range(number_of_rows)]\n",
+    "modified = [int(not val) if random.random() < 0.15 else int(val) for val in interesting_column]\n",
+    "final_dataset = pd.DataFrame(\n",
+    "    {\n",
+    "        \"city\": [f\"city_{index}\" for index in range(number_of_rows)],\n",
+    "        \"is_from_usa\": [True]*number_of_rows,\n",
+    "        \"right_wing\": map(lambda x: \"yes\" if x else \"no\", interesting_column),\n",
+    "        \"target\": modified,\n",
+    "    },\n",
+    ")\n",
+    "final_dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b0fbbef",
+   "metadata": {},
+   "source": [
+    "Next, we show how the catboost encoding methodology would work for one iteration i.e. using only one permutation to build one tree. The encoder that uses one permutation can be obtained from the Category Encoders package, and is the one that we will be using next. However, take into consideration that the effects of this methodology would be benefited from the multiple permutations when building different trees in the Catboost ensemble. That is, the integration of the encoding and modelling methodology that happens in the Catboost classifier further improves the response to the aforemntioned kinds of features.\n",
+    "\n",
+    "Hence, here we will only show the effect with the simpler (one permutation) version of the catboost encoder and use a decision tree to fit the encoded data. This would be similar to training Catboost with one iteration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "794ed859",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>is_from_usa</th>\n",
+       "      <th>right_wing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.050000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.033333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.025000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.020000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.016667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.014286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.550000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.012500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   city  is_from_usa  right_wing\n",
+       "0   0.1          0.1    0.100000\n",
+       "1   0.1          0.1    0.100000\n",
+       "2   0.1          0.1    0.050000\n",
+       "3   0.1          0.1    0.033333\n",
+       "4   0.1          0.1    0.025000\n",
+       "5   0.1          0.1    0.020000\n",
+       "6   0.1          0.1    0.016667\n",
+       "7   0.1          0.1    0.014286\n",
+       "8   0.1          0.1    0.550000\n",
+       "9   0.1          0.1    0.012500"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "catboost_encoder = ce.CatBoostEncoder(cols=[\"city\", \"right_wing\", \"is_from_usa\"])\n",
+    "catboost_encoded_data = catboost_encoder.fit_transform(\n",
+    "    final_dataset.drop(columns=[\"target\"], axis=1),\n",
+    "    final_dataset[\"target\"],\n",
+    ")\n",
+    "catboost_encoded_data"
    ]
   }
  ],
